scenarios/demo-rhacm-hybrid-workload/kustomize/base/hybrid-workload/resources/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: php-crud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: php-crud
  template:
    metadata:
      labels:
        app: php-crud
        deployment: php-crud
    spec:
      containers:
        - name: php-crud
          image: 'image-registry.openshift-image-registry.svc:5000/hybrid-workload/php-crud:latest'
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8443
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
