scenarios/demo-rhacm-hybrid-workload/kustomize/base/hybrid-workload/resources/networkpolicy.yaml
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: deny-other-namespaces
spec:
  podSelector: {}
  ingress:
    - from:
        - podSelector: {}
  policyTypes:
    - Ingress
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: web-allow-external-php-crud
spec:
  podSelector:
    matchLabels:
      app: php-crud
  ingress:
    - {}
  policyTypes:
    - Ingress
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: web-allow-external-knative
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: ksvc-php-crud
  ingress:
    - {}
  policyTypes:
    - Ingress
